# MOAI_GPU

./: .gitignore  CMakeLists.txt  README.md  gpu_memory_profiler.py  results.csv  single_layer_results.csv
scratch/: Batch_encode_encrypt.cuh  Ct_pt_matrix_mul.cuh  ckks_evaluator.cu  ckks_evaluator.cuh  ckks_evaluator_parallel.cu  ckks_evaluator_parallel.cuh  gelu_other.cuh  layernorm.cuh  test_batch_encode_encrypt.cuh  test_ct_ct_matrix_mul.cuh  test_ct_pt_matrix_mul.cuh  test_layernorm.cuh  test_single_layer.cuh
src/: main.cu  test.cu
src/include/: hf_rope_constants_seq128_dim128.cuh  include.cuh  rn.sh
src/include/source/: ckks_evaluator_parallel.cu  ckks_evaluator_parallel.cuh  utils.cuh  utils_moai.cuh
src/include/source/att_block/: single_att_block.cuh
src/include/source/bootstrapping/: Bootstrapper.cu  Bootstrapper.cuh
src/include/source/bootstrapping/common/: Polynomial.cuh
src/include/source/matrix_mul/: Batch_encode_encrypt.cuh  Ct_ct_matrix_mul.cuh  Ct_pt_matrix_mul.cuh  Rotary_Position_Embedding.cuh
src/include/source/non_linear_func/: Chebyshev.cuh  RMSNorm.cuh  causal_masked_softmax.cuh  gelu_other.cuh  layernorm.cuh  silu.cuh  softmax.cuh
src/include/test/: test_phantom_ckks.cuh  test_single_layer.cuh
src/include/test/bootstrapping/: bootstrapping.cu  bootstrapping.cuh
src/include/test/matrix_mul/: test_ct_ct_matrix_mul.cuh  test_ct_pt_matrix_mul.cuh  test_rotary_position_embedding.cuh
src/include/test/non_linear_func/: test_BPmax_BatchLN.cuh  test_RMSNorm.cuh  test_causal_masked_softmax.cuh  test_gelu.cuh  test_layernorm.cuh  test_silu.cuh  test_softmax.cuh
